Backend/k8s-manifests/ingest-api-deployment.yaml
# k8s-manifests/04-ingest-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingest-api-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingest-api
  template:
    metadata:
      labels:
        app: ingest-api
    spec:
      containers:
      - name: ingest-api
        image: alfredmanurung/npk:v2 # Nama image yang sama
        imagePullPolicy: Always 
        ports:
        - containerPort: 5000
