Backend/k8s-manifests/ingest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingest-api-service
spec:
  type: ClusterIP
  selector:
    app: ingest-api
  ports:
    - port: 5000
      targetPort: 5000
