Backend/k8s-manifests/nutrisync-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: npklink.test
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ingest-api-service   # <- ganti ke nama service yang ada
                port:
                  number: 5000             # <- sesuaikan dengan port di servicemu
